--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,49 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto+Mono:wght@100;200;400;600;700&family=Secular+One&family=Source+Sans+Pro:wght@200;400;700&display=swap");
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip:before {
+  content: attr(title);
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  z-index: 10;
+  display: none;
+}
+
+#stack .tooltip:before {
+  font-size: 1.2rem;
+  background: none;
+  color: black;
+  top: 100%;
+  bottom: auto;
+}
+
+#stack .tooltip:before {
+  font-size: 1.2rem;
+  background: none;
+  color: black;
+  top: 100%;
+  bottom: auto;
+}
+
+.tooltip:hover:before {
+  display: block;
+}
+
+@media (hover: none) {
+  .tooltip:before {
+    display: block;
+  }
+}
