--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
-  background: rgba(0, 0, 0, 0.8);
+  background: #000000cc;
   color: #ffffff;
   padding: 5px 10px;
   border-radius: 5px;
@@ -25,8 +25,14 @@
   font-weight: 400;
 }
 
-.tooltip:hover:before {
-  display: block;
+.tooltip-black-on-white.tooltip:before {
+  background: #ffffffcc;
+  color: #000000;
+}
+
+.tooltip-bottom.tooltip:before {
+  top: 100%;
+  bottom: auto;
 }
 
 #stack .tooltip:before {
@@ -35,6 +41,10 @@
   color: black;
   top: 100%;
   bottom: auto;
+}
+
+.tooltip:hover:before {
+  display: block;
 }
 
 @media (hover: none) {
@@ -72,4 +82,67 @@
 
   background: #ed594a;
   box-shadow: 1.4em 0em #fdd800, 2.8em 0em #5ac05a;
+}
+
+.paper {
+  width: 70%;
+  position: relative;
+  margin: 0 auto;
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+  background-color: white;
+  box-shadow: 0.2rem -0.3rem 1.5rem #00000040;
+  border-radius: 0.2rem;
+}
+
+.paper::before {
+  content: "";
+  width: 2px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 2rem;
+  background-color: #ff000099;
+}
+
+.paper-pattern {
+  height: 100%;
+  background-image: repeating-linear-gradient(white 0px, white 25px, teal 26px);
+  background-position: 0 -7px;
+  font-size: 22px;
+  line-height: 25.9px;
+  padding: 0 20px 0 66px;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.paper-content {
+  gap: 25.9px;
+}
+
+@media (min-width: 1280px) {
+  .paper {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .paper::before {
+    left: 4rem;
+  }
+
+  .paper-pattern {
+    background-image: repeating-linear-gradient(
+      white 0px,
+      white 40px,
+      teal 41px
+    );
+    background-position: 0 -10px;
+    font-size: 30px;
+    line-height: 40.5px;
+    padding: 0 120px;
+  }
+  .paper-content {
+    gap: 40.5px;
+  }
 }
